@@ -1,3 +1,4 @@
+* add Azure pipeline for continuous testing and automatic builds
 * performance optimizations in Crystal.environment
 * Continous integration tests running on MacOS, Windows and Linux
 * new flavor of material/Crystal definition from fractional atomic coordinates
